tests/cases/fail/assert_message_type.p4
def main() -> None:
    assert True, 1
